src/test/ui/underscore-lifetime/in-binder.Rust2015.stderr
error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:12:6
   |
LL | impl<'_> IceCube<'_> {}
   |      ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:17:15
   |
LL | struct Struct<'_> {
   |               ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:23:11
   |
LL | enum Enum<'_> {
   |           ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:29:13
   |
LL | union Union<'_> {
   |             ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:35:13
   |
LL | trait Trait<'_> {
   |             ^^ `'_` is a reserved lifetime name

error[E0637]: `'_` cannot be used here
  --> $DIR/in-binder.rs:40:8
   |
LL | fn foo<'_>() {
   |        ^^ `'_` is a reserved lifetime name

error[E0106]: missing lifetime specifier
  --> $DIR/in-binder.rs:12:18
   |
LL | impl<'_> IceCube<'_> {}
   |                  ^^ expected lifetime parameter

error: aborting due to 7 previous errors

Some errors occurred: E0106, E0637.
For more information about an error, try `rustc --explain E0106`.
